--- a/projeto-final/src/app/app.component.html
+++ b/projeto-final/src/app/app.component.html
@@ -22,6 +22,11 @@
             </li>
             <li role="separator" class="divider"></li>
             <li>
+              <a [routerLink]="['/ola-mundo']">
+                Olá Mundo
+              </a>
+            </li>
+            <li>
               <a [routerLink]="['/calculadora']">
                 Calculadora
               </a>
